# MLDemo

./: environment.yaml  pyproject.toml
tests/: test_ml_demo.py
