[tool.poetry]
name = "ml_demo"
version = "0.1.0"
description = "Sample ML Project"
authors = ["Anukool Purohit"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pytorch-lightning = "^1.3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
